--- a/index.html
+++ b/index.html
@@ -442,18 +442,26 @@
                             </div>
                         </li>
                         <!-- Event 2 (Optional) -->
-                        <!-- <li class="timeline-item">
-                            <div class="timeline-badge"><i class="fas fa-users"></i></div>
+                        <li class="timeline-item">
+                            <div class="timeline-badge"><i class="fas fa-chalkboard-teacher"></i></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h5 class="timeline-title">Mentorship Session</h5>
-                                    <p><i>Date:</i> 20-Dec-2024</p>
+                                    <h5 class="timeline-title">Tech Talk: Fundamentals of AI/ML</h5>
+
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Mentored a group of students on deep learning techniques and model optimization.</p>
+                                    <p><b><i>Date:</i> 21-Dec-2024</b></p>
+                                    
+                                    <p>Co-presented with <a href="https://www.linkedin.com/in/lasya-s-539481218?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B7wY3WLFPS9S7wu3vjNLg%2FQ%3D%3D"><b>Lasya S</b></a> in a <a href="https://www.linkedin.com/posts/charles-jeyaseelan_artificialintelligence-machinelearning-techtalk-activity-7276229894903132161-9C9n?utm_source=share&utm_medium=member_desktop">session</a> organized by 
+                                        <a href="https://gdg.community.dev/gdg-on-campus-amrita-vishwa-vidyapeetham-mysuru-india/">GDG Amrita Mysuru Chapter.</a>
+                                        Mentored a group of students on deep learning techniques, model optimization,
+                                        and their practical applications.
+                                        Special thanks to <a href="https://www.linkedin.com/in/lakshay-panwar-95b430239?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BoHlUaDwFTpqMaPcMafJ9Sg%3D%3D"><b>Lakshay Panwar</b></a> (GDG Lead) and 
+                                        <a href="https://www.linkedin.com/in/sreekumar-nr-89634b156?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bv89G%2BpLmR9WcU2zaCvKdCA%3D%3D"><b>Sreekumar NR</b></a>
+                                        (Coding Club Coordinator) for their guidance and support.</p>
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
 
